--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,16 +6,16 @@
     <header>
     <h1>Tech Blog</h1>
     <ul>
-        <li>
+        <li id = "dashboard">
             Dashboard
         </li>
-        <li>
+        <li id = "homepage">
             Homepage
         </li>
-        <li>
+        <li id = "navlog">
             Log in
         </li>
-        <li>
+        <li id = "logout">
             Log out
         </li>
     </ul>
@@ -46,4 +46,16 @@
             </span>
       </button>
 </div>
+
 </form>
+
+<div id = "login">
+    <p id ="spacer" class = "login">Don't have an account?</p>
+    <button type="submit" id="signup" class = "login">
+            <span>
+                  Signup
+            </span>
+      </button>
+</div>
+
+<script src="/javascript/login.js"></script>
