--- a/views/addpost.handlebars
+++ b/views/addpost.handlebars
@@ -5,27 +5,24 @@
     <header>
     <h1>Tech Blog</h1>
     <ul>
-        <li>
+        <li id = "dashboard">
             Dashboard
         </li>
-        <li>
+        <li id = "homepage">
             Homepage
         </li>
-        <li>
-            Log in
-        </li>
-        <li>
+        <li id = "logout">
             Log out
         </li>
     </ul>
 </header>
 
-<form id = "login" class = "post">
+<form id = "login" class = "formatt">
         <div>
             <h2>Create your post here:</h2>
         </div>
 
-    <div id = "login" class = "login post">
+    <div id = "login" class = "login ">
         <div id = "title" class = "login">
               <label for="floating_plant_name">Title:</label>
               <input type="text" name="floating_plant_name" id="titleinput" placeholder="" required />
@@ -38,11 +35,14 @@
             <textarea rows ="20" cols="50" type="text" name="floating_plant_name" id="bodyinput" placeholder="" required /></textarea>
         </div>
 
+    <div>
+</form>
 
+<div id = "login" class = "post-submit">
         <button type="submit" id="post-submit" class = "login">
               <span>
                 Create new blogpost
               </span>
         </button>
-    <div>
-</form>
+</div>
+        
