--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,16 +5,16 @@
     <header>
     <h1>Tech Blog</h1>
     <ul>
-        <li>
+        <li id = "dashboard">
             Dashboard
         </li>
-        <li>
+        <li id = "homepage">
             Homepage
         </li>
-        <li>
+        <li id = "navlog">
             Log in
         </li>
-        <li>
+        <li id = "logout">
             Log out
         </li>
     </ul>
@@ -50,3 +50,5 @@
       </button>
       </div>
 </form>
+
+<script src="/javascript/signup.js"></script>
